ovirt-host-deploy -- oVirt host deploy

????-??-?? - Version 1.3.0

 * kdump: initial support. rhbz#1079821.

2014-05-02 - Version 1.2.1

 * vdsmhooks: use short distribution name as suffix.
 * hardware: fix typo in debug message.
 * gluster: nrpe: add nrpe configuration support. rhbz#1091978.

2014-03-28 - Version 1.2.0

2014-01-20 - Version 1.2.0_beta

 * vdsm: packages: stop libvirtd before using vdsm-tool to configure it.
   rhbz#999853.
 * vdsm: packages: adjust to new method of vdsm configure.
 * vdsm: packages: always restart libvirtd. rhbz#1043524.
 * vdsm: pki: revert spice pki dir permissions and mode to revert legacy
   vdsm-bootstrap doings. rhbz#1008328.
 * openstack: rename quantum to neutron due to project rename,
   rhbz#1032890.

2013-08-26 - Version 1.1.0

 * vdsm: bridge: fix vlan id detection, thanks to Jeff Bailey for reporting.
 * vdsm: bridge: fix format typo when querying network manager, thanks to
   Pascal Jakobi for reporting.
 * vdsm: bridge: fix python compatibility issue and network manager.
 * vdsm: bridge: attempt to rollback if bridge creation failed.
 * vdsm: hardware: do not fail if cannot read msr, rhbz#916589.
 * vdsm: vdsmid: do not attempt to install dmidecode on platforms other than
   x86.
 * vdsm: vdsmid: detect power cpu correctly.
 * vdsm: ovirt-node: detect nodes with own bridges and report back.
 * vdsm: packages: cgconfig is dependency of libvirt.
 * vdsm: packages: use new method of libvirt reconfigure.
 * vdsm: packages: disable NetworkManager service.
 * gluster: packages: start glusterd if no reboot.
 * tune: tuned: support gluster specific profile.
 * openstack: add neutron support.
 * build: re-introduce external gettext packaging.

2013-02-14 - Version 1.0.0

Alon Bar-Lev <alonbl@redhat.com>

 * support vdsm hooks by copying hooks from engine machine to host or by
   specifying a list of packages to be installed at host, refer to README for
   farther information.

 * offline packager feature.
