@@ -3,6 +3,7 @@ ovirt-host-deploy -- oVirt host deploy
 ????-??-?? - Version 1.3.0
 
  * kdump: initial support. rhbz#1079821.
+ * vdsmhooks: fix package installation.
 
 2014-05-02 - Version 1.2.1
 
